// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateMessagePlanPage renders the page when messageOrder is "LETTER" 1`] = `
<DocumentFragment>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      class="nhsuk-grid-row"
      data-testid="page-content-wrapper"
    >
      <div
        class="nhsuk-grid-column-two-thirds"
      >
        <h1
          class="nhsuk-heading-xl"
          data-testid="page-heading"
        >
          Create a message plan
        </h1>
        <div
          data-message-order="LETTER"
          data-testid="message-plan-form"
        />
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`CreateMessagePlanPage renders the page when messageOrder is "NHSAPP" 1`] = `
<DocumentFragment>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      class="nhsuk-grid-row"
      data-testid="page-content-wrapper"
    >
      <div
        class="nhsuk-grid-column-two-thirds"
      >
        <h1
          class="nhsuk-heading-xl"
          data-testid="page-heading"
        >
          Create a message plan
        </h1>
        <div
          data-message-order="NHSAPP"
          data-testid="message-plan-form"
        />
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`CreateMessagePlanPage renders the page when messageOrder is "NHSAPP,EMAIL" 1`] = `
<DocumentFragment>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      class="nhsuk-grid-row"
      data-testid="page-content-wrapper"
    >
      <div
        class="nhsuk-grid-column-two-thirds"
      >
        <h1
          class="nhsuk-heading-xl"
          data-testid="page-heading"
        >
          Create a message plan
        </h1>
        <div
          data-message-order="NHSAPP,EMAIL"
          data-testid="message-plan-form"
        />
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`CreateMessagePlanPage renders the page when messageOrder is "NHSAPP,EMAIL,SMS" 1`] = `
<DocumentFragment>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      class="nhsuk-grid-row"
      data-testid="page-content-wrapper"
    >
      <div
        class="nhsuk-grid-column-two-thirds"
      >
        <h1
          class="nhsuk-heading-xl"
          data-testid="page-heading"
        >
          Create a message plan
        </h1>
        <div
          data-message-order="NHSAPP,EMAIL,SMS"
          data-testid="message-plan-form"
        />
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`CreateMessagePlanPage renders the page when messageOrder is "NHSAPP,EMAIL,SMS,LETTER" 1`] = `
<DocumentFragment>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      class="nhsuk-grid-row"
      data-testid="page-content-wrapper"
    >
      <div
        class="nhsuk-grid-column-two-thirds"
      >
        <h1
          class="nhsuk-heading-xl"
          data-testid="page-heading"
        >
          Create a message plan
        </h1>
        <div
          data-message-order="NHSAPP,EMAIL,SMS,LETTER"
          data-testid="message-plan-form"
        />
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`CreateMessagePlanPage renders the page when messageOrder is "NHSAPP,SMS" 1`] = `
<DocumentFragment>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      class="nhsuk-grid-row"
      data-testid="page-content-wrapper"
    >
      <div
        class="nhsuk-grid-column-two-thirds"
      >
        <h1
          class="nhsuk-heading-xl"
          data-testid="page-heading"
        >
          Create a message plan
        </h1>
        <div
          data-message-order="NHSAPP,SMS"
          data-testid="message-plan-form"
        />
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`CreateMessagePlanPage renders the page when messageOrder is "NHSAPP,SMS,EMAIL" 1`] = `
<DocumentFragment>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      class="nhsuk-grid-row"
      data-testid="page-content-wrapper"
    >
      <div
        class="nhsuk-grid-column-two-thirds"
      >
        <h1
          class="nhsuk-heading-xl"
          data-testid="page-heading"
        >
          Create a message plan
        </h1>
        <div
          data-message-order="NHSAPP,SMS,EMAIL"
          data-testid="message-plan-form"
        />
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`CreateMessagePlanPage renders the page when messageOrder is "NHSAPP,SMS,LETTER" 1`] = `
<DocumentFragment>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      class="nhsuk-grid-row"
      data-testid="page-content-wrapper"
    >
      <div
        class="nhsuk-grid-column-two-thirds"
      >
        <h1
          class="nhsuk-heading-xl"
          data-testid="page-heading"
        >
          Create a message plan
        </h1>
        <div
          data-message-order="NHSAPP,SMS,LETTER"
          data-testid="message-plan-form"
        />
      </div>
    </div>
  </main>
</DocumentFragment>
`;
